fix: unable to scroll on smaller browser window

--- a/src/styles/results.css
+++ b/src/styles/results.css
@@ -1,9 +1,8 @@
-/* Panel variant styles */
+Panel variant styles
 .cv-panel--results {
   text-align: center;
   background: linear-gradient(to bottom,var(--cv-primary-green-10), var(--cv-primary-green-70) 80%);
   color: var(--cv-white);
-  min-block-size: fit-content;
 }
 
 /* Results panel styles */
