--- a/src/styles/welcome.css
+++ b/src/styles/welcome.css
@@ -3,7 +3,6 @@
   text-align: center;
   background: linear-gradient(to bottom,var(--cv-primary-green-10), var(--cv-primary-green-70) 80%);
   color: var(--cv-white);
-  min-block-size: fit-content;
 }
 
 /* Welcome panel styles */
